🔧 chore: Product Data Source with MongoDB Partially Implemented
🚀 Began integrating MongoDB as the data source for product information. Includes foundational setup and initial functionality. Further enhancements and testing are required.

#MongoDB #ProductData #Backend #InProgress

--- a/src/Services/Product/Product.API/appsettings.json
+++ b/src/Services/Product/Product.API/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "mongodb://localhost:27017",
+    
+  },
+
+  "DatabaseSettings": {
+    "DatabaseName": "ProductDb",
+    "CollectionName": "ProductItems"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
