--- a/src/Services/Product/Product.API/Properties/launchSettings.json
+++ b/src/Services/Product/Product.API/Properties/launchSettings.json
@@ -2,19 +2,21 @@
   "profiles": {
     "http": {
       "commandName": "Project",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5192"
+      "applicationUrl": "http://localhost:7000"
     },
     "https": {
       "commandName": "Project",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7203;http://localhost:5192"
+      "applicationUrl": "https://localhost:7050;http://localhost:7000"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
