--- a/src/Services/ShoppingCart/ShoppingCart.API/ShoppingCart.API.csproj
+++ b/src/Services/ShoppingCart/ShoppingCart.API/ShoppingCart.API.csproj
@@ -11,8 +11,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Marten" Version="7.35.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Scrutor" Version="5.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks\BuildingBlocks.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ShoppingCart\CheckoutShoppingCart\" />
+    <Folder Include="ShoppingCart\DeleteShoppingCart\" />
+    <Folder Include="ShoppingCart\GetShoppingCart\" />
+    <Folder Include="ShoppingCart\StoreShoppingCart\" />
   </ItemGroup>
 
 </Project>
