--- a/src/Services/ShoppingCart/ShoppingCart.API/appsettings.json
+++ b/src/Services/ShoppingCart/ShoppingCart.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5433;Database=shoppingCartdb;User Id=postgres;Password=postgres;Include Error Detail=true",
+    "Redis": "localhost:6379"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
