🚀 feat: Core Business Logic with Marten PostgreSQL and Redis Cache Implemented
✅ Developed and integrated core business logic leveraging Marten for PostgreSQL and Redis for caching.
🔧 Enhanced performance and reliability with efficient data management and caching mechanisms.

#Backend #BusinessLogic #Marten #PostgreSQL #RedisCache

--- a/src/Services/ShoppingCart/ShoppingCart.API/ShoppingCart.API.csproj
+++ b/src/Services/ShoppingCart/ShoppingCart.API/ShoppingCart.API.csproj
@@ -23,10 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ShoppingCart\CheckoutShoppingCart\" />
-    <Folder Include="ShoppingCart\DeleteShoppingCart\" />
-    <Folder Include="ShoppingCart\GetShoppingCart\" />
-    <Folder Include="ShoppingCart\StoreShoppingCart\" />
+    <Folder Include="Pipelines\Command\CheckoutShoppingCart\" />
   </ItemGroup>
 
 </Project>
