🐳 feat(docker): Added Docker Container Orchestration Support for Shopping Cart API
✅ Implemented Docker container orchestration to streamline deployment and scaling for the Shopping Cart API.
🔧 Configured Docker Compose to manage multi-container setups for improved development and production workflows.

#Docker #ContainerOrchestration #ShoppingCartAPI #DevOps

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -2,6 +2,12 @@ services:
   productdb:
     image: mongo
 
+  shoppingCartdb:
+    image: postgres
+ 
+  distributedShoppingCartcache:
+    image: redis
+
   product.api:
     image: ${DOCKER_REGISTRY-}productapi
     build:
@@ -16,4 +22,5 @@ services:
 
 volumes:
       mongo_productdb:
+      postgres_shoppingCartdb:
 
