--- a/src/Services/ShoppingCart/ShoppingCart.API/ShoppingCart.API.csproj
+++ b/src/Services/ShoppingCart/ShoppingCart.API/ShoppingCart.API.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Scrutor" Version="5.1.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
 
   <ItemGroup>
