--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -6,6 +6,24 @@ services:
       - "27017:27017"
      volumes:
       - mongo_productdb:/data/db
+  
+  shoppingCartdb:
+     container_name: shoppingCartdb
+     environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=shoppingCartdb
+     restart: always
+     ports:
+        - "5433:5432"
+     volumes:
+      - postgres_shoppingCartdb:/var/lib/postgresql/data/
+  
+  distributedShoppingCartcache:
+    container_name: distributedShoppingCartcache
+    restart: always
+    ports:
+      - "6379:6379"
 
   product.api:
     container_name: product.api
@@ -24,13 +42,19 @@ services:
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
 
   shoppingcart.api:
+    container_name: shoppingcart.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
+      - ConnectionStrings__Database=Server=shoppingCartdb;Port=5432;Database=shoppingCartdb;User Id=postgres;Password=postgres;Include Error Detail=true
+      - ConnectionStrings__Redis=distributedcache:6379
+    depends_on:
+      - shoppingCartdb
+      - distributedShoppingCartcache
     ports:
-      - "8080"
-      - "8081"
+      - "4000:8080"
+      - "4050:8081"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
